<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_Paises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_paises"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_paises"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp">

            <RadioButton
                android:id="@+id/rbpais1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rbpais1" />

            <RadioButton
                android:id="@+id/rbpais2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/rbpais2" />

            <RadioButton
                android:id="@+id/rbpais3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/rbpais3" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spCiudades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/rbEspanna" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgProvincias1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbProvincia1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rbPueblosMadrid1" />

            <RadioButton
                android:id="@+id/rbProvincia2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/rbPueblosMadrid2" />

            <RadioButton
                android:id="@+id/rbProvincia3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/rbPueblosMadrid3" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgProvincias2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbProvincia4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/rbPueblosMadrid4" />

            <RadioButton
                android:id="@+id/rbProvincia5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/rbPueblosMadrid5" />

            <RadioButton
                android:id="@+id/rbProvicia6"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/rbPueblosMadrid6" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cb1" />

        <CheckBox
            android:id="@+id/cb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cb2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_info2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rb"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_info3"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>